--- a/LCFS implementation.ipynb
+++ b/LCFS implementation.ipynb
@@ -1032,8 +1032,8 @@
       "srv_count\n",
       "dst_host_count\n",
       "count\n",
-      "Rahul\n",
-      "Rahul\n"
+      "Garima\n",
+      "Garima\n"
      ]
     }
    ],
@@ -1046,7 +1046,7 @@
     "    corr = df1.corr()\n",
     "    ind = -1\n",
     "    rpind = -1\n",
-    "    name = 'Rahul'\n",
+    "    name = 'Garima'\n",
     "    for rp in df1:\n",
     "        rpind += 1\n",
     "        if rp == 'label':\n",
